# serializer version: 1
# name: test_seller_format_matches_seller_whatsapp_layout[ro]
  '''
  <b>Sofabelle București:</b>
  12.08.2026
  
  Leads Mail/FB/IG: 0
  
  Leads Telefon: 1
  
  Leads WhatsApp: 2
  
  Leads Designer/Colaboratori: 0
  
  Leads Alte/Showroom (revenire): 0
  
  Vizita in showroom: 3
  
  Oferta: 0
  
  Reoferta: —
  
  Contract Cantitate: 0
  
  Încasări: —
  
  
  
  <b>Sofabelle Brașov:</b>
  12.08.2026
  
  Leads Mail/FB/IG: 1
  
  Leads Telefon: 1
  
  Leads WhatsApp: 0
  
  Leads Designer/Colaboratori: 0
  
  Leads Alte/Showroom (revenire): 0
  
  Vizita in showroom: 1
  
  Oferta: 1
  
  Reoferta: —
  
  Contract Cantitate: 0
  
  Încasări: —
  
  
  
  <b>Sofabelle Cluj:</b>
  12.08.2026
  
  Leads Mail/FB/IG: 0
  
  Leads Telefon: 0
  
  Leads WhatsApp: 0
  
  Leads Designer/Colaboratori: 0
  
  Leads Alte/Showroom (revenire): 0
  
  Vizita in showroom: 2
  
  Oferta: 2
  
  Reoferta: —
  
  Contract Cantitate: 0
  
  Încasări: —
  
  
  
  Fără showroom: 1
  ———
  <b>TOTAL</b> · Leads 6 · Vizite 6 · Oferte 3 · Contracte 0
  
  <i>Reoferta, Încasări: sursa B indisponibilă.</i>
  '''
# ---
# name: test_seller_format_matches_seller_whatsapp_layout[ru]
  '''
  <b>Sofabelle București:</b>
  12.08.2026
  
  Leads Mail/FB/IG: 0
  
  Leads Telefon: 1
  
  Leads WhatsApp: 2
  
  Leads Designer/Colaboratori: 0
  
  Leads Alte/Showroom (revenire): 0
  
  Vizita in showroom: 3
  
  Oferta: 0
  
  Reoferta: —
  
  Contract Cantitate: 0
  
  Încasări: —
  
  
  
  <b>Sofabelle Brașov:</b>
  12.08.2026
  
  Leads Mail/FB/IG: 1
  
  Leads Telefon: 1
  
  Leads WhatsApp: 0
  
  Leads Designer/Colaboratori: 0
  
  Leads Alte/Showroom (revenire): 0
  
  Vizita in showroom: 1
  
  Oferta: 1
  
  Reoferta: —
  
  Contract Cantitate: 0
  
  Încasări: —
  
  
  
  <b>Sofabelle Cluj:</b>
  12.08.2026
  
  Leads Mail/FB/IG: 0
  
  Leads Telefon: 0
  
  Leads WhatsApp: 0
  
  Leads Designer/Colaboratori: 0
  
  Leads Alte/Showroom (revenire): 0
  
  Vizita in showroom: 2
  
  Oferta: 2
  
  Reoferta: —
  
  Contract Cantitate: 0
  
  Încasări: —
  
  
  
  Без шоурума: 1
  ———
  <b>ИТОГО</b> · Leads 6 · Vizite 6 · Oferte 3 · Contracte 0
  
  <i>Reoferta, Încasări: источник B недоступен.</i>
  '''
# ---
# name: test_seller_format_without_previous_snapshot_shows_dashes[ro]
  '''
  <b>Sofabelle București:</b>
  12.08.2026
  
  Leads Mail/FB/IG: 0
  
  Leads Telefon: 1
  
  Leads WhatsApp: 2
  
  Leads Designer/Colaboratori: 0
  
  Leads Alte/Showroom (revenire): 0
  
  Vizita in showroom: —
  
  Oferta: —
  
  Reoferta: —
  
  Contract Cantitate: —
  
  Încasări: —
  
  
  
  <b>Sofabelle Brașov:</b>
  12.08.2026
  
  Leads Mail/FB/IG: 1
  
  Leads Telefon: 1
  
  Leads WhatsApp: 0
  
  Leads Designer/Colaboratori: 0
  
  Leads Alte/Showroom (revenire): 0
  
  Vizita in showroom: —
  
  Oferta: —
  
  Reoferta: —
  
  Contract Cantitate: —
  
  Încasări: —
  
  
  
  <b>Sofabelle Cluj:</b>
  12.08.2026
  
  Leads Mail/FB/IG: 0
  
  Leads Telefon: 0
  
  Leads WhatsApp: 0
  
  Leads Designer/Colaboratori: 0
  
  Leads Alte/Showroom (revenire): 0
  
  Vizita in showroom: —
  
  Oferta: —
  
  Reoferta: —
  
  Contract Cantitate: —
  
  Încasări: —
  
  
  
  ———
  <b>TOTAL</b> · Leads 6 · Vizite — · Oferte — · Contracte —
  
  <i>Vizita, Oferta, Contract: lipsește snapshotul CRM de ieri, nu se poate calcula.</i>
  <i>Reoferta, Încasări: sursa B indisponibilă.</i>
  '''
# ---
# name: test_seller_format_without_previous_snapshot_shows_dashes[ru]
  '''
  <b>Sofabelle București:</b>
  12.08.2026
  
  Leads Mail/FB/IG: 0
  
  Leads Telefon: 1
  
  Leads WhatsApp: 2
  
  Leads Designer/Colaboratori: 0
  
  Leads Alte/Showroom (revenire): 0
  
  Vizita in showroom: —
  
  Oferta: —
  
  Reoferta: —
  
  Contract Cantitate: —
  
  Încasări: —
  
  
  
  <b>Sofabelle Brașov:</b>
  12.08.2026
  
  Leads Mail/FB/IG: 1
  
  Leads Telefon: 1
  
  Leads WhatsApp: 0
  
  Leads Designer/Colaboratori: 0
  
  Leads Alte/Showroom (revenire): 0
  
  Vizita in showroom: —
  
  Oferta: —
  
  Reoferta: —
  
  Contract Cantitate: —
  
  Încasări: —
  
  
  
  <b>Sofabelle Cluj:</b>
  12.08.2026
  
  Leads Mail/FB/IG: 0
  
  Leads Telefon: 0
  
  Leads WhatsApp: 0
  
  Leads Designer/Colaboratori: 0
  
  Leads Alte/Showroom (revenire): 0
  
  Vizita in showroom: —
  
  Oferta: —
  
  Reoferta: —
  
  Contract Cantitate: —
  
  Încasări: —
  
  
  
  ———
  <b>ИТОГО</b> · Leads 6 · Vizite — · Oferte — · Contracte —
  
  <i>Vizita, Oferta, Contract: нет снапшота CRM за вчера, посчитать нельзя.</i>
  <i>Reoferta, Încasări: источник B недоступен.</i>
  '''
# ---
